--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+MY_KEY = "d7a0f7aebe514e68930dc022bd52d058"
+MY_BASE_URL = "https://newsapi.org/v2/"
