--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     //splash_screen_api
     implementation 'androidx.core:core-splashscreen:1.0.1'
 
+    //data-store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
