--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     //data-store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    //coin
+    implementation 'io.coil-kt:coil:2.4.0'
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
