--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,10 @@ dependencies {
     //coin
     implementation 'io.coil-kt:coil:2.4.0'
 
+    //blury
+    implementation 'jp.wasabeef:blurry:4.0.1'
+
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
